Fix article list text wrapping bug
This isn't a great fix, but it looks better than article title and
publish date text-wrapping independently, affecting legibility

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -55,6 +55,10 @@
 	overflow-x: hidden;
 }
 
+.entries li {
+	flex-wrap: wrap;
+}
+
 img {
 	display: block;
 	margin-left: auto;
